--- a/assets/resources/css/style.css
+++ b/assets/resources/css/style.css
@@ -29,6 +29,20 @@ footer {
     background-color: #323844;
     padding: 25px 0;
 }
+
+/*** liveaboard Content ***/
+
+#home {
+    background-image: url('../images/liveaboard-bg.jpg');
+    background-repeat: no-repeat;
+    margin-bottom: 40px;
+}
+
+#about-us {
+    background: white;
+    padding: 80px 0;
+}
+
 /*** liveaboard Content ***/
 
 #liveaboard {
