--- a/assets/resources/css/style.css
+++ b/assets/resources/css/style.css
@@ -45,19 +45,19 @@ h1, h2, h3, h4, h5 {
 html, body {
   height: 100%;
   width: 100%;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 18px;
 }
 
 .navbar {
     background: white;
-    
-    font-size: 18px;
-    font-weight: 600;
 }
 
 .navbar-expand-lg .navbar-nav .nav-link {
-    padding-left: .75rem;
-    padding-right: .75rem;
+    font-size: 16px;
+    font-weight: 400;
+    margin-left: 12px;
+    margin-right: 12px;
 }
 
 .navbar-nav a {
@@ -106,14 +106,22 @@ footer a:hover {
 }
 
 #about-us {
-    text-align: center;
+    text-align: left;
     background: white;
     padding: 6rem 0;
 }
 
 #about-us h5 {
     color: #dc0000;
-    margin-bottom: 3rem; 
+    margin: 0;
+}
+
+#about-us h1 {
+    letter-spacing: .15rem;
+}
+
+#about-us p {
+    line-height: 2rem;
 }
 
 #home-gallery {
